Fix html small mistake.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -6,7 +6,7 @@
 <body>
 
 <div id="control">
-<input id="run" type="button"/ value="Run">
+<input id="run" type="button" value="Run" />
 </div>
 
 <div id="outputblock">
