Added control buttons and css with no implementation.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="unlambda.css" />
 <script type="text/javascript" src="unlambda.js"></script>
 </head>
 <body>
 
 <div id="control">
-<input id="run" type="button" value="Run" />
+	<input id="stop" type="button" value="Stop" />
+	<input id="pause" type="button" value="Pause" />
+	<input id="run" type="button" value="Run" />
+	<input id="run_step" type="button" value="Step by Step" />
+	<input id="step" type="button" value="Just One Step" />
 </div>
 
 <div id="outputblock">
 </div>
 
 <div id="codeblock">
-<textarea id="code"></textarea>
+	<textarea id="code"></textarea>
 </div>
 
 <div id="inputblock">
-<textarea id="input"></textarea>
+	<textarea id="input"></textarea>
 </div>
+
 </body>
 </html>
