Add OutputPanel.setCompileError() and test for OutputPanel.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<div id="control">
+<div id="control_block">
 	<input id="stop" type="button" value="Stop" />
 	<input id="pause" type="button" value="Pause" />
 	<input id="run" type="button" value="Run" />
@@ -14,14 +14,14 @@
 	<input id="step" type="button" value="Just One Step" />
 </div>
 
-<div id="outputblock">
+<div id="output_block">
 </div>
 
-<div id="codeblock">
+<div id="code_block">
 	<textarea id="code"></textarea>
 </div>
 
-<div id="inputblock">
+<div id="input_block">
 	<textarea id="input"></textarea>
 </div>
 
