Add EOF optios, Dom event handlers, and tests to InputPanel.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -23,6 +23,10 @@
 
 <div id="input_block">
 	<textarea id="input"></textarea>
+	<span>
+	<label><input id="input_eof" type="radio" name="eof_behavior" value="0" checked/>EOF</label>
+	<label><input id="input_wait" type="radio" name="eof_behavior" value="1" />Wait for input</label>
+	</span>
 </div>
 
 </body>
