Add EchoBack option on InputPanel. OutputPanel.appendInputEchoBack is TODO.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -26,6 +26,7 @@
 	<span>
 	<label><input id="input_eof" type="radio" name="eof_behavior" value="0" checked/>EOF</label>
 	<label><input id="input_wait" type="radio" name="eof_behavior" value="1" />Wait for input</label>
+	<label><input id="echo_back" type="checkbox" name="echo_back" value="1" checked/>Echo back</label>
 	</span>
 </div>
 
