Create StatusPanel and move setCompileError from OutputPanel to StatusPanel.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -14,6 +14,9 @@
 	<input id="step" type="button" value="Just One Step" />
 </div>
 
+<div id="status_block">
+</div>
+
 <div id="output_block">
 </div>
 
