Change default input setting from EOF to WaitForInput.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -27,8 +27,8 @@
 <div id="input_block">
 	<textarea id="input"></textarea>
 	<span>
-	<label><input id="input_eof" type="radio" name="eof_behavior" value="0" checked/>EOF</label>
-	<label><input id="input_wait" type="radio" name="eof_behavior" value="1" />Wait for input</label>
+	<label><input id="input_wait" type="radio" name="eof_behavior" value="0" checked/>Wait for input</label>
+	<label><input id="input_eof" type="radio" name="eof_behavior" value="1"/>EOF</label>
 	<label><input id="echo_back" type="checkbox" name="echo_back" value="1" checked/>Echo back</label>
 	</span>
 </div>
