Add sample code selector.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -21,6 +21,11 @@
 </div>
 
 <div id="code_block">
+	<select id="code_selector">
+		<option value="">Select for sample code...</option>
+		<option value="hello_world">Hello, world!</option>
+		<option value="hello_world_short">Hello, world! (short)</option>
+	</select><br/>
 	<textarea id="code"></textarea>
 </div>
 
