Show Current status.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -15,10 +15,11 @@
 </div>
 
 <div id="status_block">
+	<span>status: <span id="current_status"></span></span>
+	<span>step: <span id="current_step"></span></span>
 </div>
-
-<div id="output_block">
-</div>
+<div id="compile_error_block"></div>
+<div id="output_block"></div>
 
 <div id="code_block">
 	<select id="code_selector">
