Add CurrentCodePanel. updateView is TODO.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -28,6 +28,10 @@
 		<option value="hello_world_short">Hello, world! (short)</option>
 	</select><br/>
 	<textarea id="code"></textarea>
+	<div>
+		<label><input id="show_current_variable" type="checkbox" name="show_current_variable" value="1" />Show code while execution.</label>
+		<div id="current_variable_block"></div>
+	</div>
 </div>
 
 <div id="input_block">
