Remove default output to allow view change when just pressing Run.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -49,7 +49,7 @@
 <div id="right_side">
 	<div>
 		<span class="block_name">Output</span>
-		<div id="output_block">Hello, world!</div>
+		<div id="output_block"></div>
 	</div>
 	<div>
 		<span class="block_name">Current Variable</span>
