Hide current variable related everything when the checkbox is not checked.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -51,7 +51,7 @@
 		<span class="block_name">Output</span>
 		<div id="output_block"></div>
 	</div>
-	<div>
+	<div id="current_variable_container">
 		<span class="block_name">Current Variable</span>
 		<div id="current_variable_block"></div>
 	</div>
