--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -30,6 +30,7 @@
 			<option value="">Select for sample code...</option>
 			<option value="hello_world">Hello, world!</option>
 			<option value="hello_world_short">Hello, world! (short)</option>
+			<option value="adventure">Adventure by irori</option>
 		</select>
 		<label><input id="show_current_variable" type="checkbox" name="show_current_variable" value="1" />Show code while execution.</label>
 		<br/>
