Add Echo and EchoShort sample.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -30,7 +30,9 @@
 			<option value="">Select for sample code...</option>
 			<option value="hello_world">Hello, world!</option>
 			<option value="hello_world_short">Hello, world! (short)</option>
-			<option value="adventure">Adventure by irori</option>
+			<option value="echo">Echo</option>
+			<option value="echo_short">Echo (short)</option>
+			<option value="adventure">Adventure</option>
 		</select>
 		<label><input id="show_current_variable" type="checkbox" name="show_current_variable" value="1" />Show code while execution.</label>
 		<br/>
