Show current code on default.

--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -34,7 +34,7 @@
 			<option value="echo_short">Echo (short)</option>
 			<option value="adventure">Adventure</option>
 		</select>
-		<label><input id="show_current_variable" type="checkbox" name="show_current_variable" value="1" />Show code while execution.</label>
+		<label><input id="show_current_variable" type="checkbox" name="show_current_variable" value="1" checked="checked" />Show code while execution.</label>
 		<br/>
 		<textarea id="code">`````````````.H.e.l.l.o.,. .w.o.r.l.d.!i</textarea>
 	</div>
