--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -90,9 +90,9 @@
 <tr><th><code>`eX</code></th>
     <td>Program exits with code <code>X</code>.</td></tr>
 <tr><th><code>`@X</code></th>
-    <td><code>`Xi</code> iff successfully read a character from STDIN and set it as chrrent character. Otherwise <code>`Xv</code></td></tr>
+    <td><code>`Xi</code> iff successfully read a character from STDIN and set it as current character. Otherwise <code>`Xv</code></td></tr>
 <tr><th><code>`?XY</code></th>
-    <td><code>`Yi</code> iff last application of <code>@</code> sucessfully set current character to <code>X</code>. Othersize <code>`Yv</code></td></tr>
+    <td><code>`Yi</code> iff last application of <code>@</code> sucessfully set current character to <code>X</code>. Otherwise <code>`Yv</code></td></tr>
 <tr><th><code>`|X</code></th>
     <td><code>`X.Y</code> iff last application of <code>@</code> successfully set current character to <code>Y</code>. Otherwise <code>`Xv</code></td></tr>
 </tbody></table>
