--- a/html/unlambda.html
+++ b/html/unlambda.html
@@ -66,7 +66,7 @@
 	<a href="http://en.wikipedia.org/wiki/Unlambda">Unlambda</a> is small functional language consists of only 11 primitive functions (<code>s k i v c d .X e @ ?X |</code>) and Apply operator (<code>`</code>).
 	Visit <a href="http://www.madore.org/~david/programs/unlambda/">Unlambda Author's site</a> to learn details of language specification.
   This interpreter code is available on <a href="https://github.com/inazz/unlambda_js">github</a>.
-	Adventure on the "sample" code is the world biggest Unlambda program, written by <a href="https://github.com/irori/advent-unlambda">Kunihiko Sakamoto</a>.
+	Adventure on the "sample" code is the world biggest Unlambda program, written by <a href="https://github.com/irori/advent-unlambda">irori</a>.
 	</p>
 </div>
 
